correccion de errores en excepciones HTTP, agregado error cuando medium no tiene ubicacion, sigue sin andar @valid